k8s/deployment.yaml
apiVersion: apps/v1                                                       
kind: Deployment                                                          
metadata:                                                                 
  name: arash-argocd-demo                                                        
  labels:                                                                 
    app: arash-argocd-demo                                                       
spec:                                                                     
  replicas: 4                                                            
  selector:                                                               
    matchLabels:                                                          
      app: arash-argocd-demo                                                     
  template:                                                               
    metadata:                                                             
      labels:                                                             
        app: arash-argocd-demo                                                   
    spec:                                                                 
      containers:                                                         
        - name: nginx                                                       
          image: quay.io/kurs/demoserver-a:latest                                                 
          ports:                                                            
          - containerPort: 5000                                              
          resources:                                                        
            requests:                                                       
              memory: "64Mi"                                                
              cpu: "100m"                                                   
            limits:
              memory: "128Mi"
              cpu: "200m"
